--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,3 @@
-@media (max-width: 575.98px) {
-  nav .hamburger {
-    display: block;
-  }
-  nav .hamburger #logo {
-    position: fixed;
-    top: 8;
-  }
-  nav nav ul {
-    max-height: 0px;
-    background: black;
-  }
-  nav nav ul li {
-    width: 100%;
-    padding: 24px 0;
-  }
-  nav .menu {
-    max-height: 20em;
-    display: none;
-  }
-}
-
 .diaporama {
   height: 400px;
   margin: 30px auto;
@@ -237,13 +215,8 @@ footer p {
   font-weight: bold;
 }
 
-footer a {
-  text-decoration: none;
-  color: black;
-}
-
-footer a:hover {
-  color: red;
+footer h3 {
+  font-size: 1em;
 }
 
 @media (max-width: 575.98px) {
